--- a/package.json
+++ b/package.json
@@ -1,20 +1,25 @@
 {
   "name": "4xi-vue",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "lib/guide-4xi-vue.cjs.js",
+  "module": "lib/guide-4xi-vue.esm.js",
   "repository": "git@github.com:4xii/4xi-vue.git",
   "author": "shixinzhu <975795875@qq.com>",
   "license": "MIT",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "rollup -c rollup.config.js"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-typescript": "^7.16.7",
+    "@rollup/plugin-typescript": "^8.3.1",
     "@types/jest": "^27.4.1",
     "babel-jest": "^27.5.1",
     "jest": "^27.5.1",
+    "rollup": "^2.70.1",
+    "tslib": "^2.3.1",
     "typescript": "^4.6.2"
   }
 }
